--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -1,31 +1,39 @@
 <div class="row">
 
+  <div class="col m12" ng-repeat="err in message">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <p>{{ err.message }}</p>
+      </div>
+    </div>
+  </div>
+
   <div class="col m6 offset-m3">
     <h1>Register</h1>
-    <form action="/register" method="post">
+    <form ng-submit="register()">
       <div>
         <label for="">UserName</label>
-        <input type="text" class="validate" id="" placeholder="UserName123" name="username">
+        <input type="text" class="validate" placeholder="UserName123" ng-model="user.username">
       </div>
       <br>
       <div>
         <label for="">Password</label>
-        <input type="password" class="validate" id="" placeholder="Sup3rS3cr3tpassw0rd" name="password">
+        <input type="password" class="validate" placeholder="Sup3rS3cr3tpassw0rd" ng-model="user.password">
       </div>
       <br>
       <div>
         <label for="">First Name</label>
-        <input type="text" class="validate" id="" placeholder="John" name="firstName">
+        <input type="text" class="validate" placeholder="John" ng-model="user.firstName">
       </div>
       <br>
       <div>
         <label for="">Last Name</label>
-        <input type="text" class="validate" id="" placeholder="Smith" name="lastName">
+        <input type="text" class="validate" placeholder="Smith" ng-model="user.lastName">
       </div>
       <br>
       <div>
         <label for="">Email</label>
-        <input type="email" class="validate" id="" placeholder="Email@Somthing.com" name="email">
+        <input type="email" class="validate" placeholder="Email@Somthing.com" ng-model="user.email">
       </div>
       <br>
       <button type="submit" class="btn">Register</button>
