--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,7 @@
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-
+  <link href="css/main.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--Let browser know website is optimized for mobile-->
 </head>
 
