--- a/public/partials/yelp.html
+++ b/public/partials/yelp.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng>
   <div class="col m8 offset-m2">
     <form class="" action="index.html" method="post">
       <input type="text"  placeholder="terms" ng-model="yelp.terms" value="">
