--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -4,7 +4,7 @@
     <div class="card light-blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Welcome To Food With Friends!</span>
-        <p>Our Goal Is To Make Sure Getting Your Friends Together Is As Easy As Possible</p><br>
+        <p>Our goal is to make meeting with your friends to get a bite to eat, hassle free.</p><br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
         <a href="/login" class="waves-effect waves-light btn orange darken-2">Login</a>
       </div>
