--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,5 +1,13 @@
 <div class="row">
 
+  <div class="col m12" ng-show="message !== ''">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <p>{{ message }}</p>
+      </div>
+    </div>
+  </div>
+
   <div class="col m6 offset-m3">
     <h1>Login</h1>
     <form ng-submit="login()">
