--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Food With Friends</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
+        <li ng-show="authenticated"><a href="#">{{ current_user }}</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">JavaScript</a></li>
       </ul>
