--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,8 @@
     <div class="nav-wrapper">
       <a href="" class="brand-logo">Food With Friends</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Alex Giordano</a></li>
-        <li><a href="badges.html">Long Phan</a></li>
+        <li><a href="login">Login</a></li>
+        <li><a href="register">Register</a></li>
         <li><a href="http://tgportfolio.herokuapp.com">Tammer Galal</a></li>
       </ul>
     </div>
