--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
   display: flex;
   min-height: 100vh;
@@ -7,7 +6,7 @@ body {
 }
 
 footer{
-  position:absolute;
+  position:fixed;
   bottom:0;
   width: 100%
 }
@@ -15,10 +14,3 @@ footer{
 main {
   flex: 1 0 auto;
 }
-=======
-/*footer{
-  position:absolute;
-  bottom: 0;
-  width: 100%;
-}*/
->>>>>>> 28bee7612f90ac66b4f84f4e93d998a55890def4
