finally able to send angular yelp inputs to yelproute

--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -7,7 +7,7 @@
         <p>Our Goal Is To Make Sure Getting Your Friends Together Is As Easy As Possible</p><br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
         <a href="/login" class="waves-effect waves-light btn orange darken-2">Login</a>
-        <a href="/yelp" class="waves-effect waves-light btn orange darken-2">Yelp</a>
+        <a href="/yelpKey" class="waves-effect waves-light btn orange darken-2">YelpKey</a>
       </div>
     </div>
   </div>
