--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="login">Login</a></li>
         <li><a href="register">Register</a></li>
-        <li><a href="http://tgportfolio.herokuapp.com">Tammer Galal</a></li>
+        <li><a href="send">Send an SMS</a></li>
       </ul>
     </div>
   </nav>
