--- a/public/partials/send.html
+++ b/public/partials/send.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h2>Want to eat with your friends? Send them a text!</h2>
+    <h3 class="send">Want to eat with your friends? Send them a text!</h3>
     <form ng-submit="sms()">
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone1">
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone2">
