fixed ngRoute issues

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script> -->
   <script src="js/app.js"></script>
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <body ng-app="mainApp">
   <nav>
     <div class="nav-wrapper">
-      <a href="" class="brand-logo">Food With Friends</a>
+      <a href="/" class="brand-logo">Food With Friends</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="login">Login</a></li>
         <li><a href="register">Register</a></li>
