fixed event model and changed yelp route to createEvent

--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col m8 offset-m2">
-    <form ng-submit="yelpSubmit()">
+    <form ng-submit="createEvent()">
       <input type="text" placeholder="term" ng-model="yelp.term" value="">
       <input type="text" placeholder="location" ng-model="yelp.location" value="">
       <button type="submit" name="button">submit</button>
