--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -7,7 +7,7 @@
         <p>Our goal is to make meeting with your friends to get a bite to eat, hassle free.</p><br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
         <a href="/login" class="waves-effect waves-light btn orange darken-2">Login</a>
-        <a href="/yelp" class="waves-effect waves-light btn orange darken-2">YelpKey</a>
+        <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
       </div>
     </div>
   </div>
