--- a/public/partials/yelp.html
+++ b/public/partials/yelp.html
@@ -4,11 +4,11 @@
       <input type="text" placeholder="term" ng-model="yelp.term" value="">
       <input type="text" placeholder="location" ng-model="yelp.location" value="">
       <button type="submit" name="button">submit</button>
+      <br>
       {{ yelp }}
     </form>
-    <div ng-repeat="yelp in yelps">
-      {{ yelp.term}}
-      {{ yelp.location}}
+    <div ng-repeat="restaurant in restaurants">
+      {{ yelp.restaurant}}
     </div>
   </div>
 </div>
