made some front end changes and styled the footer a bit more cleanly, notably making it smaller, removing links, and making a created by

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,18 +34,9 @@
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul>
+        <div class="col l12 s12 madeBy">
+          <h5 class="white-text">Food with friends was created with love by</h5>
+          <p class="grey-text text-lighten-4">Alex Giordano, Long Phan, Tammer Galal, and Terrence Henriquez</p>
         </div>
       </div>
     </div>
