--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,15 +5,19 @@ body {
 
 }
 
-/*footer{
+footer{
   position:fixed;
   bottom:0;
-  width: 100%
-}*/
+  width: 100%;
+  height: 12%
+}
 
 main {
   flex: 1 0 auto;
 }
 .send{
   width: 100%
+}
+.madeBy{
+  text-align: center;
 }
