--- a/public/partials/send.html
+++ b/public/partials/send.html
@@ -3,8 +3,11 @@
     <h3 class="send">Want to eat with your friends? Send them a text!</h3>
     <form ng-submit="sms()">
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone1">
+      <h5>{{number.phone1}}</h5>
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone2">
+      <h5>{{number.phone2}}</h5>
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone3">
+      <h5>{{number.phone3}}</h5>
       <button class="btn btn-default" type="submit" name="button">Submit</button>
     </form>
   </div>
