--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,16 +2,20 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-
+  background-image: url('/img/Recipes.jpg');
+  background-size:cover;
 }
 
 footer{
+  color: #283593;
   position:fixed;
   bottom:0;
   width: 100%;
   height: 12%
 }
-
+nav{
+  color: #283593
+}
 main {
   flex: 1 0 auto;
 }
