--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--Let browser know website is optimized for mobile-->
 </head>
 <body ng-app="mainApp">
-  <nav>
+  <nav class="indigo darken-3">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">Food With Friends</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -31,7 +31,7 @@
       <!-- Partials Render Here -->
     </div>
   </div>
-  <footer class="page-footer">
+  <footer class="page-footer indigo darken-3">
     <div class="container">
       <div class="row">
         <div class="col l12 s12 madeBy">
