super small style centering change

--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -2,7 +2,7 @@
 
   <div class="col s12">
     <div class="card light-blue darken-1">
-      <div class="card-content white-text">
+      <div class="card-content white-text welcome">
         <span class="card-title">Welcome To Food With Friends!</span>
         <p>Our goal is to make meeting with your friends to get a bite to eat, hassle free.</p><br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
