--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="col l12 s12 madeBy">
-          <h5 class="white-text">Food with friends was created with love by</h5>
+          <h5 class="white-text">Food with friends was created with hunger by</h5>
           <p class="grey-text text-lighten-4">Alex Giordano, Long Phan, Tammer Galal, and Terrence Henriquez</p>
         </div>
       </div>
