--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -11,28 +11,28 @@
   <div class="col m6 offset-m3">
     <h1>Register</h1>
     <form ng-submit="register()">
-      <div>
-        <label for="">UserName</label>
+      <div class="formTextBlack">
+        <strong><label for="">UserName</label></strong>
         <input type="text" class="validate" placeholder="UserName123" ng-model="user.username">
       </div>
       <br>
-      <div>
-        <label for="">Password</label>
+      <div class="formTextBlack">
+        <strong><label for="">Password</label></strong>
         <input type="password" class="validate" placeholder="Sup3rS3cr3tpassw0rd" ng-model="user.password">
       </div>
       <br>
-      <div>
-        <label for="">First Name</label>
+      <div class="formTextBlack">
+        <strong><label for="">First Name</label></strong>
         <input type="text" class="validate" placeholder="John" ng-model="user.firstName">
       </div>
       <br>
-      <div>
-        <label for="">Last Name</label>
+      <div class="formTextBlack">
+        <strong><label for="">Last Name</label></strong>
         <input type="text" class="validate" placeholder="Smith" ng-model="user.lastName">
       </div>
       <br>
-      <div>
-        <label for="">Email</label>
+      <div class="formTextBlack">
+        <strong><label for="">Email</label></strong>
         <input type="email" class="validate" placeholder="Email@Somthing.com" ng-model="user.email">
       </div>
       <br>
