fixing form readability

--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="col m6 offset-m3">
-    <h1>Register</h1>
+    <h1 class="reg">Register</h1>
     <form ng-submit="register()">
       <div class="formTextBlack">
         <strong><label for="">UserName</label></strong>
