--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,14 @@ main {
 label{
   color: black;
 }
+.input-field{
+ color: black;
+}
+.registerForm{
+  border: 2px solid black;
+  background-color: white;
+  opacity: 0.6;
+}
 .send{
   width: 100%
 }
@@ -30,4 +38,20 @@ label{
 }
 .formTextBlack{
   color: black;
+}
+
+::-webkit-input-placeholder {
+   color: red;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: red;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: red;
+}
+
+:-ms-input-placeholder {
+   color: red;
 }
