--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -1,5 +1,4 @@
 <div class="row">
-
   <div class="col m12" ng-repeat="err in message">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
@@ -7,10 +6,9 @@
       </div>
     </div>
   </div>
-
   <div class="col m6 offset-m3">
     <h1 class="reg">Register</h1>
-    <form ng-submit="register()">
+    <form ng-submit="register()" class="registerForm">
       <div class="formTextBlack">
         <strong><label for="">UserName</label></strong>
         <input type="text" class="validate" placeholder="UserName123" ng-model="user.username">
