--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ label{
 .input-field{
  color: black;
 }
-.registerForm{
+.registerForm, .loginForm{
   border: 2px solid black;
   background-color: white;
   opacity: 0.6;
