--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col m6 offset-m3">
     <h1>Login</h1>
-    <form ng-submit="login()">
+    <form ng-submit="login()" class="loginForm">
       <div class="form-group">
         <label for="">User Name</label>
         <input type="text" id="" placeholder="UserName123" name="username" ng-model="user.username">
