--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="col m6 offset-m3">
-    <h1>Login</h1>
+    <h1 class="logins">Login</h1>
     <form ng-submit="login()" class="loginForm">
       <div class="form-group">
         <label for="">User Name</label>
