--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col m6 offset-m3">
     <h1 class="reg">Register</h1>
-    <form ng-submit="register()" class="registerForm">
+    <form ng-submit="register()" class="registerForm z-depth-5">
       <div class="formTextBlack">
         <strong><label for="">UserName</label></strong>
         <input type="text" class="validate" placeholder="UserName123" ng-model="user.username">
@@ -31,7 +31,7 @@
       <br>
       <div class="formTextBlack">
         <strong><label for="">Email</label></strong>
-        <input type="email" class="validate" placeholder="Email@Somthing.com" ng-model="user.email">
+        <input type="email" class="validate" placeholder="Email@Something.com" ng-model="user.email">
       </div>
       <br>
       <button type="submit" class="btn">Register</button>
