--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,7 @@ label{
  color: black;
 }
 .registerForm, .loginForm{
-  border: 2px solid black;
+  padding-left: 15px;
   border-radius: 5px;
   background-color: white;
   opacity: 0.6;
@@ -35,6 +35,7 @@ label{
   width: 100%
 }
 .madeBy, .welcome, .reg, .logins{
+  padding-top: 20px;
   text-align: center;
 }
 .formTextBlack{
