--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,7 @@ label{
  color: black;
 }
 .registerForm, .loginForm{
-  padding-left: 15px;
+  padding: 20px;
   border-radius: 5px;
   background-color: white;
   opacity: 0.6;
