working on accounts page

--- a/public/partials/myaccount.html
+++ b/public/partials/myaccount.html
@@ -8,6 +8,12 @@
   </div>
   <div class="card-reveal">
     <span class="card-title grey-text text-darken-4">Here are some details on your account<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <p>Here is some more information about your activity on the app!</p>
+    <ul>
+      <li>Date Joined:</li>
+      <li>Events Created:</li>
+      <li>Favorite Restaurants:</li>
+      <li>Favorite Food:</li>
+    </ul>
   </div>
 </div>
