--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -12,6 +12,7 @@
       </div>
       <div ng-show='current_user' class="card-content white-text welcome">
         <h4>Welcome, {{current_user}}</h4>
+        {{current_user}}
         <span>What are ya waiting for?! Create an event!</span>
         <br>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
