--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -10,12 +10,12 @@
     <h1 class="logins">Login</h1>
     <form ng-submit="login()" class="loginForm z-depth-5">
       <div class="form-group">
-        <label for="">User Name</label>
-        <input type="text" id="" placeholder="UserName123" name="username" ng-model="user.username">
+        <label for=""> <i class="material-icons">account_circle</i>User Name</label>
+        <input type="text" id="" placeholder="UserName" name="username" ng-model="user.username">
       </div>
       <br>
       <div class="form-group">
-        <label for="">Password</label>
+        <label for=""><i class="material-icons">https</i>Password</label>
         <input type="password" placeholder="Sup3rS3cr3tpassw0rd" ng-model="user.password">
       </div>
       <br>
