--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,14 @@
+html {
+  height: 100%;
+}
 body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
   background-image: url('/img/Recipes.jpg');
   background-size:cover;
+  background-size: width height;
+  background-repeat: no-repeat;
 }
 
 footer{
@@ -30,6 +35,7 @@ label{
   border-radius: 5px;
   background-color: white;
   opacity: 0.6;
+
 }
 .send{
   width: 100%
