--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -10,27 +10,27 @@
     <h1 class="reg">Register</h1>
     <form ng-submit="register()" class="registerForm z-depth-5">
       <div class="formTextBlack">
-        <strong><label for="">UserName</label></strong>
+        <strong><label for=""><i class="material-icons">account_box</i>UserName</label></strong>
         <input type="text" class="validate" placeholder="UserName123" ng-model="user.username">
       </div>
       <br>
       <div class="formTextBlack">
-        <strong><label for="">Password</label></strong>
+        <strong><label for=""><i class="material-icons">https</i>Password</label></strong>
         <input type="password" class="validate" placeholder="Sup3rS3cr3tpassw0rd" ng-model="user.password">
       </div>
       <br>
       <div class="formTextBlack">
-        <strong><label for="">First Name</label></strong>
+        <strong><label for=""><i class="material-icons">perm_identity</i>First Name</label></strong>
         <input type="text" class="validate" placeholder="John" ng-model="user.firstName">
       </div>
       <br>
       <div class="formTextBlack">
-        <strong><label for="">Last Name</label></strong>
+        <strong><label for=""><i class="material-icons">perm_identity</i>Last Name</label></strong>
         <input type="text" class="validate" placeholder="Smith" ng-model="user.lastName">
       </div>
       <br>
       <div class="formTextBlack">
-        <strong><label for="">Email</label></strong>
+        <strong><label for=""><i class="material-icons">email</i>Email</label></strong>
         <input type="email" class="validate" placeholder="Email@Something.com" ng-model="user.email">
       </div>
       <br>
