--- a/public/partials/yelp.html
+++ b/public/partials/yelp.html
@@ -3,7 +3,10 @@
     <form ng-submit="yelpSubmit()">
       <input type="text" placeholder="term" ng-model="yelp.term" value="">
       <input type="text" placeholder="location" ng-model="yelp.location" value="">
-      <button type="submit" name="button">submit</button>
+      <!-- <button type="submit" name="button">submit</button> -->
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>
       <br>
       {{ yelp }}
     </form>
