--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,10 +8,10 @@ body {
 
 footer{
   color: #283593;
-  position:fixed;
-  bottom:0;
+  /*position:fixed;*/
+  /*bottom:0;*/
   width: 100%;
-  height: 12%
+  /*height: 12%*/
 }
 nav{
   color: #283593
