--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,11 +48,11 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
+    <!-- <div class="footer-copyright">
       <div class="container">
         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
-    </div>
+    </div> -->
   </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
