--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,8 @@
 </head>
 <body ng-app="mainApp">
   <nav class="indigo darken-3">
-    <div ng-hide="current_user" class="nav-wrapper">
+    <div ng-hide="current_user" class="navbar-fixed">
+>
       <a href="/" class="brand-logo">Food With Friends</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="login">Login</a></li>
