--- a/public/partials/send.html
+++ b/public/partials/send.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h3 class="send">Want to eat with your friends? Send them a text!</h3>
-    <form ng-submit="sms()">
+    <form ng-submit="sms()" class="sendForm">
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone1">
       <h5>{{number.phone1}}</h5>
       <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone2">
