--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -6,7 +6,16 @@
         <span class="card-title">Welcome To Food With Friends!</span>
         <p>Our goal is to make meeting with your friends to get a bite to eat, hassle free.</p><br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
-        <a href="/login" class="waves-effect waves-light btn orange darken-2">Login</a>
+        <a href="/login" ng-hide="current_user" class="waves-effect waves-light btn orange darken-2">Login</a>
+        <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
+        <a href="/send" class="waves-effect waves-light btn orange darken-2">Message your Friends</a>
+      </div>
+      <div ng-show='current_user' class="card-content white-text welcome">
+        <h4>Welcome, {{current_user}}</h4>
+        <span>What are ya waiting for?! &nbsp Create an event!</span>
+        <br>
+        <br>
+        <br>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
       </div>
     </div>
