added some angular hides and shows

--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -2,13 +2,11 @@
 
   <div class="col s12">
     <div class="card light-blue darken-1">
-      <div class="card-content white-text welcome">
+      <div class="card-content white-text welcome" ng-hide='current_user'>
         <span class="card-title">Welcome To Food With Friends!</span>
         <p>Our goal is to make meeting with your friends to get a bite to eat, hassle free.</p><br>
-        <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
-        <a href="/login" ng-hide="current_user" class="waves-effect waves-light btn orange darken-2">Login</a>
-        <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
-        <a href="/send" class="waves-effect waves-light btn orange darken-2">Message your Friends</a>
+        <a ng-hide='current_user' href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
+        <a ng-hide='current_user' href="/login" ng-hide="current_user" class="waves-effect waves-light btn orange darken-2">Login</a>
       </div>
       <div ng-show='current_user' class="card-content white-text welcome">
         <h4>Welcome, {{current_user}}</h4>
@@ -16,6 +14,7 @@
         <br>
         <br>
         <br>
+        <a href="/send" class="waves-effect waves-light btn orange darken-2">Message your Friends</a>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
       </div>
     </div>
