added gulp to concat our app.js and controllers to one js file before we run the app

--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -9,6 +9,7 @@
         <br>
         <br>
         <a href="/register" class="waves-effect waves-light btn orange darken-2">Create Account</a>
+        <a href="/form" class="waves-effect waves-light btn orange darken-2">FORM</a>
         <a href="/login" ng-hide="current_user" class="waves-effect waves-light btn orange darken-2">Login</a>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
       </div>
