--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="login">Login</a></li>
         <li><a href="register">Register</a></li>
+        <li><a href="form">Form</a></li>
       </ul>
     </div>
     <div ng-show="current_user" class="nav-wrapper">
