--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,7 +30,7 @@ label{
 .input-field{
   color: black;
 }
-.registerForm, .loginForm{
+.registerForm, .loginForm, .sendForm{
   padding: 20px;
   border-radius: 5px;
   background-color: white;
@@ -38,6 +38,7 @@ label{
 
 }
 .send{
+  padding-top: 30px;
   width: 100%
 }
 .madeBy, .welcome, .reg, .logins{
