--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -1,1 +1,23 @@
-hi im event page
+<form class="" ng-submit='myEventSubmit()'>
+  <button type="submit" name="button">submito</button>
+</form>
+
+<div>
+  <table class="">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>places</th>
+        <th>location</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="event in events" >
+        <td>{{event.name}}</td>
+        <td ng-repeat="place in event.places">{{place.name}}</td>
+        <td>{{event.location}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<!-- {{events}} -->
