--- a/public/partials/form.html
+++ b/public/partials/form.html
@@ -1,9 +1,10 @@
 <div class="row">
   <div class="col s12">
-    <!-- <div class="card red light-1"> -->
-      <h1 id="formHead">Form ish</h1>
-      <input type="text" id="input-field" name="name" value="">
-    <!-- </div> -->
-
+    <form ng-submit="formSubmit()" class="registerForm ">
+      <h1 id="formHead">Form </h1>
+      <input type="text" placeholder="tern" ng-model="form.term">
+      <input type="text" placeholder="locatione" ng-model="form.location">
+      <button type="submit" name="button">submit</button>
+    </form>
   </div>
 </div>
