--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="newEvent">Create Event</a></li>
         <li><a href="/">Map</a></li>
+        <li><a href="event">My Events</a></li>
         <li><a href="send">SMS</a></li>
         <li><a href="/">Account</a></li>
       </ul>
