--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -3,21 +3,32 @@
 </form>
 
 <div>
-  <table class="">
+  <table>
     <thead>
-      <tr>
-        <th>Name</th>
-        <th>places</th>
-        <th>location</th>
-      </tr>
+      <th>
+        <tr>
+          Event
+        </tr>
+      </th>
     </thead>
     <tbody>
-      <tr ng-repeat="event in events" >
-        <td>{{event.name}}</td>
-        <td ng-repeat="place in event.places">{{place.name}}</td>
-        <td>{{event.location}}</td>
+      <tr>
+        <td class="col 3" ng-repeat="event in events">
+          {{event.name}}
+        </td>
       </tr>
     </tbody>
   </table>
+   <!-- <ul ng-repeat="event in events">
+    <li>{{event.name}}</li>
+    <li>{{event.location}}</li>
+    <li>
+      <ul ng-repeat='place in event.places'>
+        <li>{{place.name}}</li>
+         <li>{{place.rating}}</li>
+         <li>{{place.phone}}</li>
+         <li>{{place.address}}</li>
+      </ul>
+    </li>
+  </ul>  -->
 </div>
-<!-- {{events}} -->
