added facebook btn and facebook tokens and passportfb into passport.js

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,3 +97,12 @@ box-shadow: 0 1px 0 0 white;
 #input-field {
   background-color: BlanchedAlmond;
 }
+
+.btn-block {
+display: block;
+width: 100%;
+}
+
+#facebook-btn {
+  background-color: blue;
+}
