added some fb aoath stuff, couldnt get it to work

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -23,7 +23,7 @@
         <button type="submit" class="btn btn-block">Login</button>
       </form>
       <br>
-      <a href="/auth/facebook" class="btn btn-block" id="facebook-btn"><span class="fa fa-facebook"></span> Facebook</a>
+      <a href='/facebook' class="btn btn-block" id="facebook-btn"><span class="fa fa-facebook"></span> Facebook</a>
     </div>
 
   </div>
