what am i even doing, added events ngrepeat on a grid system(3 items per row) it works so w.e

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,6 +103,10 @@ display: block;
 width: 100%;
 }
 
+.eventimg {
+  width: 200px;
+  height: 100px;
+}
 #facebook-btn {
   background-color: blue;
 }
