--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -1,7 +1,58 @@
-<form class="" ng-submit='myEventSubmit()'>
-  <button type="submit" name="button">submito</button>
-</form>
-<div>
+<div class="container-fluid">
+  <div ng-repeat="event in events" ng-if="$index % 3 == 0" class="row">
+    <table >
+      <thead>
+        <th>
+          <td class="col m4">
+            <a href="#"><button type="button" class="eventimg" name="button">{{events[$index].name}}</button></a>
+          </td>
+          <td class="col m4" ng-if="events.length > ($index + 1)">
+            <a href="#"><button class="eventimg" type="button" name="button">{{events[$index+1].name}}</button></a>
+          </td>
+          <td class="col m3" ng-if="events.length > ($index + 2)">
+            <a href="#"><button class="eventimg" type="button" name="button">{{events[$index+2].name}}</button></a>
+          </td>
+        </th>
+      </thead>
+    </table>
+  </div>
+</div>
+<!-- <div ng-repeat="event in events" ng-if="$index % 3 == 0" class="row">
+  <table>
+    <thead>
+      <th>
+        <td>
+          <a href="#">{{events[$index].name}}</a>
+        </td>
+        <td ng-if="events.length > ($index + 1)">
+          <a href="#">{{events[$index+1].name}}</a>
+        </td>
+        <td ng-if="events.length > ($index + 2)">
+          <a href="#">{{events[$index+2].name}}</a>
+        </td>
+      </th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
+        </td>
+        <td ng-if="events.length > ($index + 1)">
+          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
+        </td>
+        <td ng-if="events.length > ($index + 2)">
+          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+
+<!--
+    <span class="col-xs-4"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index].name}}</a></span>
+    <span   ng-if="events.length > ($index + 1)"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index + 1].name}}</a></span>
+    <span   ng-if="events.length > ($index + 2)"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index + 2].name}}</a></span> -->
+<!-- </div> --> -->
 <!--
   <table>
     <thead>
@@ -28,13 +79,13 @@
 
     </tbody>
   </table> -->
-<div class="row" ng-repeat="event in events track by $index" ng-if="$index % 4 == 0">
+<!-- <div class="row" ng-repeat="event in events track by $index" ng-if="$index % 4 == 0">
   <div class="col-xs-3 letter-box"
        ng-repeat="i in [$index, $index + 1, $index + 2, $index + 3]"
        ng-if="events[i] != null">
     <div><a href="#"><img src="http://loremflickr.com/320/240"/> <br>{{event.name}} {{event.location}}</a></div>
   </div>
-</div>
+</div> -->
   <!-- <div class="col 12">
     <div class="col 3">
       <ul ng-repeat="event in events">
