--- a/public/partials/facebook.html
+++ b/public/partials/facebook.html
@@ -1,26 +1,10 @@
-    <a href="https://github.com/pc035860/angular-easyfb"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-    <div class="container">
-      <h2>angular-easyfb API demo</h2>
-
-      <div>
-        <button class="btn btn-primary" ng-click="login()" ng-disabled="loginStatus.status == 'connected'">Connect with Facebook</button>
-         &nbsp;
-        <button class="btn btn-danger" ng-click="logout()" ng-disabled="!loginStatus || loginStatus.status != 'connected'">Logout</button>
-         &nbsp;
-        <button class="btn btn-success" ng-click="share()">FB.ui</button>
-      </div>
-
-      <br>
-
-      <div class="row">
-        <div class="col-md-6">
-          <h4 class="text-info">$FB.loginStatus()</h4>
-          <div class="code-block" hljs source="loginStatusJSON"></div>
-        </div>
-        <div class="col-md-6">
-          <h4 class="text-info">$FB.api('/me')</h4>
-          <div class="code-block" hljs source="apiMeJSON"></div>
-        </div>
-      </div>
-
+<div class="container">
+        <h4>
+            {{welcomeMsg}}
+        </h4>
+        <button type="button" ng-click="login()" ng-hide="isLoggedIn" class="btn btn-default navbar-btn">
+            Login
+        </button>
+    </div>
+    <div id="fb-root">
     </div>
