--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <title>Food With Friends</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
-  <script src="http://pc035860.github.io/angular-easyfb/angular-easyfb.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
+  <script src="//rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
   <script src="js/all.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
