--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
   margin-bottom:100px;
   background-image: url('/img/Recipes.jpg');
   background-size:cover;
-  background-size: width height;
+  background-size: 100%;
   background-repeat: no-repeat;
 }
 
