readded btn blocks for login and regi btns and added eventimg ssizewidth css

--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -34,7 +34,7 @@
         <input type="email" class="validate" placeholder="Email@Something.com" ng-model="user.email">
       </div>
       <br>
-      <button type="submit" class="btn">Register</button>
+      <button type="submit" class="btn btn-block">Register</button>
     </form>
   </div>
 
