--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,3 +98,15 @@ box-shadow: 0 1px 0 0 white;
 #input-field {
   background-color: BlanchedAlmond;
 }
+
+.eventimg {
+  width: 200px;
+   height: 100px;
+ }
+ .btn-block{
+   display: block;
+   width: 100%;
+ }
+  #facebook-btn {
+    background-color: blue;
+  }
