--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
+  <div class="">
+    <h1 class="form-header">My Events</h1>
+  </div>
   <div ng-repeat="event in events" ng-if="$index % 3 == 0" class="row">
     <table >
       <thead>
@@ -16,93 +19,4 @@
       </thead>
     </table>
   </div>
-</div>
-<!-- <div ng-repeat="event in events" ng-if="$index % 3 == 0" class="row">
-  <table>
-    <thead>
-      <th>
-        <td>
-          <a href="#">{{events[$index].name}}</a>
-        </td>
-        <td ng-if="events.length > ($index + 1)">
-          <a href="#">{{events[$index+1].name}}</a>
-        </td>
-        <td ng-if="events.length > ($index + 2)">
-          <a href="#">{{events[$index+2].name}}</a>
-        </td>
-      </th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
-        </td>
-        <td ng-if="events.length > ($index + 1)">
-          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
-        </td>
-        <td ng-if="events.length > ($index + 2)">
-          <img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-
-<!--
-    <span class="col-xs-4"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index].name}}</a></span>
-    <span   ng-if="events.length > ($index + 1)"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index + 1].name}}</a></span>
-    <span   ng-if="events.length > ($index + 2)"><a href="#"><img class="responsive-img eventimg" src="http://loremflickr.com/320/240"/>{{events[$index + 2].name}}</a></span> -->
-<!-- </div> --> -->
-<!--
-  <table>
-    <thead>
-      <th>
-        <td>
-          Event
-        </td>
-        <td>
-        Location
-      </td>
-        <td>
-          Places
-        </td>
-      </th>
-    </thead>
-    <tbody class="col 6" ng-repeat="event in events">
-
-        <td>
-          {{event.name}}
-        </td>
-        <td >
-          {{event.location}}
-        </td>
-
-    </tbody>
-  </table> -->
-<!-- <div class="row" ng-repeat="event in events track by $index" ng-if="$index % 4 == 0">
-  <div class="col-xs-3 letter-box"
-       ng-repeat="i in [$index, $index + 1, $index + 2, $index + 3]"
-       ng-if="events[i] != null">
-    <div><a href="#"><img src="http://loremflickr.com/320/240"/> <br>{{event.name}} {{event.location}}</a></div>
-  </div>
-</div> -->
-  <!-- <div class="col 12">
-    <div class="col 3">
-      <ul ng-repeat="event in events">
-       <li  ng-show="event.name">
-         <a href="#"><img src="http://loremflickr.com/320/240"/> <br>{{event.name}} {{event.location}}</a>
-       </li>
-    </div>
-  </div> -->
-
-
-    <!-- <li>
-      <ul ng-repeat='place in event.places'>
-        <li>{{place.name}}</li>
-         <li>{{place.rating}}</li>
-         <li>{{place.phone}}</li>
-         <li>{{place.address}}</li>
-      </ul>
-    </li> -->
-  </ul>
 </div>
