--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -7,17 +7,17 @@
     </div>
   </div>
   <div class="col m6 offset-m3">
-    <h1 class="logins">Login</h1>
+    <h1 class="form-header">Login</h1>
     <div class="loginForm z-depth-5">
       <form ng-submit="login()" >
         <div class="form-group">
           <label for=""> <i class="material-icons">account_circle</i>User Name</label>
-          <input type="text" id="" placeholder="UserName" name="username" ng-model="user.username">
+          <input type="text" id=""  name="username" ng-model="user.username">
         </div>
         <br>
         <div class="form-group">
           <label for=""><i class="material-icons">https</i>Password</label>
-          <input type="password" placeholder="Sup3rS3cr3tpassw0rd" ng-model="user.password">
+          <input type="password"  ng-model="user.password">
         </div>
         <br>
         <button type="submit" class="btn btn-block">Login</button>
