--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -19,6 +19,7 @@
         <br>
         <a href="/send" class="waves-effect waves-light btn orange darken-2">Message your Friends</a>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
+        <a href="/event" class="waves-effect waves-light btn orange darken-2">My Events</a>
       </div>
     </div>
   </div>
