--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -6,13 +6,13 @@
     <!-- <h4 class='center-align'>Search Options</h4> -->
     <form ng-submit="findMyEvents()">
       <div class="form-group ">
-        <h5 class="center-align">Number of Events</h5>
+        <h5 class="center-align form-header">Number of Events</h5>
         <p class="range-field">
           <input type="text" ng-model='search.limit'name="name" value="">
           <input type="range" ng-model="search.limit" min="0" max="20" />
         </p>
         <p>
-          <h5>Search by location</h5>
+          <h5 class="center-align form-header">Search by location</h5>
           <input type="text" ng-model='search.location' name="name" value="">
         </p>
       </div>
