added logout btn and funcitonality, should work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,9 @@
         <li><a href="newEvent">Create Event</a></li>
         <li><a href="/">Map</a></li>
         <li><a href="event">My Events</a></li>
-        <li><a href="send">SMS</a></li>
         <li><a href="/">Account</a></li>
+        <li><a href="logout" target="_self">Logout</a></li>
+
       </ul>
     </div>
   </nav>
