--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
   <script src="//rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
-  <script src="js/all.js"></script>
+  <script src="/js/all.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--Let browser know website is optimized for mobile-->
 </head>
 <body ng-app="mainApp">
@@ -55,7 +55,6 @@
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
 
   </body>
 </html>
