--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <li><a href="newEvent">Create Event</a></li>
         <li><a href="/">Map</a></li>
         <li><a href="event">My Events</a></li>
-        <li><a href="/">Account</a></li>
+        <li><a href="/myaccount">Account</a></li>
         <li><a href="logout" target="_self">Logout</a></li>
 
       </ul>
@@ -38,11 +38,6 @@
     </div>
   </div>
   <footer class="page-footer indigo darken-3">
-    <div class="container">
-      <div ng-view>
-        <!-- Partials Render Here -->
-      </div>
-    </div>
     <footer class="page-footer indigo darken-3">
       <div class="container">
         <div class="row">
