--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <!-- <h4 class='center-align'>Search Options</h4> -->
-    <form ng-submit="findMyEvents()">
+    <form class="myEventForm" ng-submit="findMyEvents()">
       <div class="form-group ">
         <h5 class="center-align form-header">Number of Events</h5>
         <p class="range-field">
