--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,7 +40,7 @@ label{
 .input-field{
   color: black;
 }
-.registerForm, .loginForm, .sendForm{
+.registerForm, .loginForm, .sendForm, .myEventform{
   padding: 20px;
   border-radius: 5px;
   background-color: white;
