google maps deploy

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src="https://rawgit.com/angular-ui/angular-google-maps/2.3.2/dist/angular-google-maps.min.js"></script>
-  <script src="//rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
+  <script src="https://rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
   <script src="/js/all.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
