google maps deploy

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
     <title>Food With Friends</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
-  <script src="http://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
+  <script src="https://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
-  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+  <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src="https://rawgit.com/angular-ui/angular-google-maps/2.3.2/dist/angular-google-maps.min.js"></script>
   <script src="https://rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
   <script src="/js/all.js"></script>
